--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -52,7 +52,9 @@ header{
 }
 @media (max-width:430px) {
     header{
+         width: 430px;
         height: 679px;
+        
     }
     .hero{                  
        flex-direction: column-reverse;
